<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <dev.olaore.customviewsamplesonandroid.views.MyTextView
        android:id="@+id/my_text_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_to_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_text_to_draw"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/my_text_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_attrs"
        app:layout_constraintTop_toBottomOf="@id/text_to_draw">

        <LinearLayout
            android:layout_width="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scalex" />

			<SeekBar
				android:layout_width="100dp"
				android:id="@+id/scale_seek_bar"
				android:layout_height="wrap_content"/>

        </LinearLayout>

		<LinearLayout
            android:layout_width="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_text" />

			<SeekBar
				android:layout_width="100dp"
				android:id="@+id/size_seek_bar"
				android:layout_height="wrap_content"/>

        </LinearLayout>

		<LinearLayout
            android:layout_width="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skew" />

			<SeekBar
				android:layout_width="100dp"
				android:id="@+id/skew_seek_bar"
				android:layout_height="wrap_content"/>

        </LinearLayout>

		<LinearLayout
            android:layout_width="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spacing" />

			<SeekBar
				android:layout_width="100dp"
				android:id="@+id/spacing_seek_bar"
				android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content">


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>